# analyse-stdenv

./: Gemfile  README.md  analyse-darwin-stdenv.sh  default.nix  drv-by-stdenv.rb  example-report.md  flake.nix  gemset.nix  shell.nix
nix/: ruby.nix
nix-build-deps/: CMakeLists.txt  default.nix  nix-build-deps.cc
